--- a/scss/components/_socialBar.scss
+++ b/scss/components/_socialBar.scss
@@ -58,8 +58,8 @@
 }
 
 .sticky-icon a i {
-  height: 30px;
-  width: 30px;
+  height: 1.875rem;
+  width: 1.875rem;
   color: #fff;
   text-align: center;
   margin-right: 20px;
