--- a/scss/freelancer.scss
+++ b/scss/freelancer.scss
@@ -12,6 +12,7 @@
 @import "components/buttons.scss";
 @import "components/chips";
 @import "./components/socialBar";
+@import "./components/bgVideo";
 
 // Import layout styles
 @import "layout/navbar.scss";
