--- a/scss/components/_chips.scss
+++ b/scss/components/_chips.scss
@@ -8,7 +8,7 @@
   opacity: 0.9;
 
   margin: 0.15rem;
-  font-size: 18px;
+  font-size: 1.25rem;
   line-height: 1;
   text-shadow: 2px 2px 0px rgb(255, 255, 255);
   text-transform: capitalize;
@@ -16,57 +16,56 @@
   font-weight: 600;
   transition: background-color 0.15s ease-in-out;
   text-decoration: none;
-  padding: 10px;
+  padding: 0.625rem;
   color: #000000;
-  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11),
-    0 5px 15px 0 rgba(0, 0, 0, 0.08);
+  box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.8);
 }
 
-.R6-Wf {
+.chip-container {
   flex-wrap: wrap;
   display: flex;
   /* background: #ffffff; */
   overflow-x: visible;
   width: 100%;
   padding: 0 3px 0 3px;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
   padding-right: 0.4rem;
 }
 
-.R6-Wf::-webkit-scrollbar {
+.chip-container::-webkit-scrollbar {
   width: 0px;
   height: 0px;
 }
 
-.R6-Wf::-webkit-scrollbar-thumb {
+.chip-container::-webkit-scrollbar-thumb {
   background-color: #555;
 }
 
-.R6-Wf div:nth-child(7n-6) {
+.chip-container div:nth-child(7n-6) {
   background: #81a1ff url(http://www.graphicartsunit.com/images/noise.png);
 }
 
-.R6-Wf div:nth-child(7n-5) {
+.chip-container div:nth-child(7n-5) {
   background: #ecec84 url(http://www.graphicartsunit.com/images/noise.png);
 }
 
-.R6-Wf div:nth-child(7n-4) {
+.chip-container div:nth-child(7n-4) {
   background: #ffb69b url(http://www.graphicartsunit.com/images/noise.png);
 }
 
-.R6-Wf div:nth-child(7n-3) {
+.chip-container div:nth-child(7n-3) {
   background: #ffacbb url(http://www.graphicartsunit.com/images/noise.png);
 }
 
-.R6-Wf div:nth-child(7n-2) {
+.chip-container div:nth-child(7n-2) {
   background: #8bc3e5 url(http://www.graphicartsunit.com/images/noise.png);
 }
 
-.R6-Wf div:nth-child(7n-1) {
+.chip-container div:nth-child(7n-1) {
   background: #c8bcff url(http://www.graphicartsunit.com/images/noise.png);
 }
 
-.R6-Wf div:nth-child(7n) {
+.chip-container div:nth-child(7n) {
   background: #7ccaae url(http://www.graphicartsunit.com/images/noise.png);
 }
 
