--- a/scss/layout/_masthead.scss
+++ b/scss/layout/_masthead.scss
@@ -1,6 +1,18 @@
 .masthead {
+  /* background: ; */
+  width: 100vw;
+  height: 100vh;
   padding-top: calc(6rem + 74px);
   padding-bottom: 6rem;
+  position: relative;
+
+  .masthead-heading-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
   .masthead-heading {
     font-size: 2.75rem;
     line-height: 2.75rem;
@@ -24,6 +36,5 @@
     .masthead-subheading {
       font-size: 1.5rem;
     }
-
   }
 }
