--- a/scss/base/_page.scss
+++ b/scss/base/_page.scss
@@ -14,11 +14,11 @@
 }
 
 html {
-  font-size: 14px;
+  font-size: 16px;
 }
 
-@include media-breakpoint-up(lg) {
+/* @include media-breakpoint-up(lg) {
   html {
     font-size: 16px;
   }
-}
+} */
