--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -19,14 +19,24 @@ $secondary: $dark-blue !default; */
 $tertiary: $red-bold !default; */
 
 /* $white: #eae7dc !default; */
-$secondary: #123c69 !default;
+/* $secondary: #123c69 !default; */
 /* $secondary: lighten(#333, 85%); */
 /* $primary: darken(#ded6cc, 15%);
 $white: lighten(#ded6cc, 12%); */
 
 /* $primary: lighten(#333, 35%); */
-$primary: lighten(#123c69, 20%);
-$white: lighten(#333, 85%);
+$black: #0b0c10;
+$dark-gray: #1f2833;
+$light-gray: #c5c6c7;
+$teal: #66fcf1;
+$dark-teal: #242525;
+
+$primary: $dark-gray !default;
+$secondary: $light-gray !default;
+$white: lighten($light-gray, 25%);
+
+$nav-background: rgba($primary, 0.3);
+$footer-background: darken($primary, 20%);
 
 // Override Bootstrap font variables
 $font-family-sans-serif: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI",
