--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -4,6 +4,8 @@
   padding-bottom: 1rem;
   font-family: $headings-font-family;
   font-weight: $headings-font-weight;
+
+  background-color: $nav-background;
   .navbar-brand {
     color: $white;
   }
@@ -26,8 +28,8 @@
     }
   }
   .navbar-toggler {
-    font-size: 80%;
-    padding: 0.8rem;
+    font-size: 1.6em;
+    outline: none;
   }
 }
 @include media-breakpoint-up(lg) {
