--- a/scss/layout/_masthead.scss
+++ b/scss/layout/_masthead.scss
@@ -14,11 +14,12 @@
   }
 
   .masthead-heading {
-    font-size: 2.75rem;
-    line-height: 2.75rem;
+    font-size: 5rem;
+    line-height: 5rem;
+    text-shadow: 8px 8px 8px rgba(0, 0, 0, 0.8);
   }
   .masthead-subheading {
-    font-size: 1.25rem;
+    font-size: 2rem;
   }
   .masthead-avatar {
     width: 15rem;
@@ -30,8 +31,8 @@
     padding-top: calc(6rem + 104px);
     padding-bottom: 6rem;
     .masthead-heading {
-      font-size: 4rem;
-      line-height: 3.5rem;
+      font-size: 6rem;
+      line-height: 6rem;
     }
     .masthead-subheading {
       font-size: 1.5rem;
